gccida/g0/fibheap_insert
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_insert/src/fibheap.c:573:1: error: use of undeclared identifier 'fibonacci_heap'
fibonacci_heap<long, basic_block_def>::insert_root( heap, node); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_insert/src/fibheap.c:573:16: error: expected expression
fibonacci_heap<long, basic_block_def>::insert_root( heap, node); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fibheap_insert/src/obj/fibheap.o] Error 1
